--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,11 @@
       rel="stylesheet"
       href="//cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css"
     />
+
+    <link
+      href="https://api.tiles.mapbox.com/mapbox-gl-js/v1.3.0/mapbox-gl.css"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
