--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,11 @@
       rel="stylesheet"
     />
 
+    <link
+      href="https://fonts.googleapis.com/css?family=Poppins&display=swap"
+      rel="stylesheet"
+    />
+
     <title>Running Mate</title>
   </head>
   <body>
